Cleanup some more crusty collections code